Try to get HTML proofer linking working

--- a/.github/workflows/reusable-jekyll-site-html-proofer.yml
+++ b/.github/workflows/reusable-jekyll-site-html-proofer.yml
@@ -5,6 +5,9 @@ on:
       COMMAND:
         required: true
         type: string
+      JOB_CALLER_NAME:
+        required: true
+        type: string
 
 jobs:
   main:
@@ -40,7 +43,7 @@ jobs:
         uses: Tiryoh/gha-jobid-action@v0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          job_name: ${{ github.JOB }}
+          job_name: ${{inputs.JOB_CALLER_NAME}} / ${{ github.JOB }}
       - if: github.EVENT_NAME == 'pull_request' && env.PROOFER_STATUS == 'fail'
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v2
