--- a/.github/workflows/reusable-jekyll-site-html-proofer.yml
+++ b/.github/workflows/reusable-jekyll-site-html-proofer.yml
@@ -1,11 +1,13 @@
 on:
   workflow_call:
     inputs:
-      # The file or command to run
-      COMMAND:
+      # The name of the job that calls this one
+      CALLER_JOB_NAME:
+        default: jekyll-site-html-proofer
         required: true
         type: string
-      JOB_CALLER_NAME:
+      # The file or command to run
+      COMMAND:
         required: true
         type: string
 
@@ -43,7 +45,7 @@ jobs:
         uses: Tiryoh/gha-jobid-action@v0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          job_name: ${{inputs.JOB_CALLER_NAME}} / ${{ github.JOB }}
+          job_name: ${{inputs.CALLER_JOB_NAME}} / ${{ github.JOB }}
       - if: github.EVENT_NAME == 'pull_request' && env.PROOFER_STATUS == 'fail'
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v2
