--- a/.github/workflows/reusable-jekyll-site-html-proofer.yml
+++ b/.github/workflows/reusable-jekyll-site-html-proofer.yml
@@ -4,7 +4,7 @@ on:
       # The name of the job that calls this one
       CALLER_JOB_NAME:
         default: jekyll-site-html-proofer
-        required: true
+        required: false
         type: string
       # The file or command to run
       COMMAND:
