--- a/gitleaks/action.yml
+++ b/gitleaks/action.yml
@@ -25,7 +25,6 @@ inputs:
     description: On default branch, the commit to start running GitLeaks from (required if run_default_on_all_commits is 'false')
     required: false
 
-
 runs:
   using: composite
   steps:
@@ -34,6 +33,7 @@ runs:
       with:
         fetch-depth: 0
     - name: Set GitLeaks Config File
+      shell: bash
       run: |
         curl -H "Accept: application/vnd.github.v3.raw" \
           -L "https://api.github.com/repos/zricethezav/gitleaks/contents/config/gitleaks.toml?ref=${{ inputs.gitleaks_version }}" \
@@ -44,6 +44,7 @@ runs:
         echo "paths = ${{ inputs.gitleaks_config_paths }}" >> ${{ github.workspace }}/gitleaks.toml
         echo "regexes = ${{ inputs.gitleaks_config_regexes }}" >> ${{ github.workspace }}/gitleaks.toml
     - name: Determine GitLeaks Command
+      shell: bash
       run: |
         DEFAULT_BRANCH_COMMIT=$(git log origin/main | head -1 | sed 's/commit //')
         COMMAND="gitleaks detect --verbose --config='/app/gitleaks.toml' --source='/app'"
@@ -61,6 +62,7 @@ runs:
           echo "command=${COMMAND} --log-opts='^origin/main ${{ github.event.pull_request.head.sha }}'" >> $GITHUB_ENV
         fi
     - name: GitLeaks
+      shell: bash
       run: |
         echo "Running: ${{ env.command }}"
         docker run --rm -v $(pwd):/app -i --entrypoint /bin/bash zricethezav/gitleaks:${{ inputs.gitleaks_version }} -c "${{ env.command }}"
