NVM, go back to primarily reusable workflows

--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -8,7 +8,4 @@ on:
 
 jobs:
   gitleaks:
-    runs-on: ubuntu-latest
-    steps:
-      - name: GitLeaks
-        uses: emmahsax/reusable-github-actions-workflows/gitleaks@test
+    uses: ./.github/workflows/reusable-gitleaks.yml
