--- a/.github/workflows/reusable-gitleaks.yml
+++ b/.github/workflows/reusable-gitleaks.yml
@@ -2,32 +2,32 @@ on:
   workflow_call:
     inputs:
       # A list of commits to ignore when running GitLeaks
-      GITLEAKS_CONFIG_COMMITS:
+      gitleaks_config_commits:
         default: "[]"
         required: false
         type: string
       # A list of file paths to ignore when running GitLeaks
-      GITLEAKS_CONFIG_PATHS:
+      gitleaks_config_paths:
         default: "[]"
         required: false
         type: string
       # A list of regexes or secrets to ignore when running GitLeaks
-      GITLEAKS_CONFIG_REGEXES:
+      gitleaks_config_regexes:
         default: "[]"
         required: false
         type: string
       # The version of GitLeaks to run
-      GITLEAKS_VERSION:
+      gitleaks_version:
         default: v8.15.2
         required: false
         type: string
       # Whether to run GitLeaks from default branch on all git history, or since a certain commit specified below
-      RUN_DEFAULT_ON_ALL_COMMITS:
+      run_default_on_all_commits:
         default: 'true'
         required: false
         type: string
-      # Commit on default branch to start running GitLeaks from (required if RUN_DEFAULT_ON_ALL_COMMITS is 'false')
-      RUN_DEFAULT_ON_SINCE_COMMIT:
+      # Commit on default branch to start running GitLeaks from (required if run_default_on_all_commits is 'false')
+      run_default_on_since_commit:
         required: false
         type: string
 
@@ -39,34 +39,37 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Set GitLeaks Config File
         run: |
           curl -H "Accept: application/vnd.github.v3.raw" \
-            -L "https://api.github.com/repos/zricethezav/gitleaks/contents/config/gitleaks.toml?ref=${{ inputs.GITLEAKS_VERSION }}" \
-            >> ${{ github.WORKSPACE }}/original.toml
-          sed "/\[allowlist\]/,/^$/d" ${{ github.WORKSPACE }}/original.toml >> ${{ github.WORKSPACE }}/gitleaks.toml
-          echo "[allowlist]" >> ${{ github.WORKSPACE }}/gitleaks.toml
-          echo "commits = ${{ inputs.GITLEAKS_CONFIG_COMMITS }}" >> ${{ github.WORKSPACE }}/gitleaks.toml
-          echo "paths = ${{ inputs.GITLEAKS_CONFIG_PATHS }}" >> ${{ github.WORKSPACE }}/gitleaks.toml
-          echo "regexes = ${{ inputs.GITLEAKS_CONFIG_REGEXES }}" >> ${{ github.WORKSPACE }}/gitleaks.toml
+            -L "https://api.github.com/repos/zricethezav/gitleaks/contents/config/gitleaks.toml?ref=${{ inputs.gitleaks_version }}" \
+            >> ${{ github.workspace }}/original.toml
+          sed "/\[allowlist\]/,/^$/d" ${{ github.workspace }}/original.toml >> ${{ github.workspace }}/gitleaks.toml
+          echo "[allowlist]" >> ${{ github.workspace }}/gitleaks.toml
+          echo "commits = ${{ inputs.gitleaks_config_commits }}" >> ${{ github.workspace }}/gitleaks.toml
+          echo "paths = ${{ inputs.gitleaks_config_paths }}" >> ${{ github.workspace }}/gitleaks.toml
+          echo "regexes = ${{ inputs.gitleaks_config_regexes }}" >> ${{ github.workspace }}/gitleaks.toml
+
       - name: Determine GitLeaks Command
         run: |
           DEFAULT_BRANCH_COMMIT=$(git log origin/main | head -1 | sed 's/commit //')
           COMMAND="gitleaks detect --verbose --config='/app/gitleaks.toml' --source='/app'"
-          if [[ ${{ github.REF }} == 'refs/heads'* ]]; then # This is a branch, not a pull request
-            if [[ ${{ github.SHA }} != $DEFAULT_BRANCH_COMMIT ]]; then # This branch is not the default branch
-              echo "COMMAND=${COMMAND} --log-opts='^origin/main ${{ github.SHA }}'" >> $GITHUB_ENV
+          if [[ ${{ github.ref }} == 'refs/heads'* ]]; then # This is a branch, not a pull request
+            if [[ ${{ github.sha }} != $DEFAULT_BRANCH_COMMIT ]]; then # This branch is not the default branch
+              echo "command=${COMMAND} --log-opts='^origin/main ${{ github.sha }}'" >> $GITHUB_ENV
             else
-              if [[ ${{ inputs.RUN_DEFAULT_ON_ALL_COMMITS }} == 'true' ]]; then # Running on all commits in git history
-                echo "COMMAND=${COMMAND}" >> $GITHUB_ENV
+              if [[ ${{ inputs.run_default_on_all_commits }} == 'true' ]]; then # Running on all commits in git history
+                echo "command=${COMMAND}" >> $GITHUB_ENV
               else
-                echo "COMMAND=${COMMAND} --log-opts='${{ inputs.RUN_DEFAULT_ON_SINCE_COMMIT }}..${{ github.SHA }}'" >> $GITHUB_ENV
+                echo "command=${COMMAND} --log-opts='${{ inputs.run_default_on_since_commit }}..${{ github.sha }}'" >> $GITHUB_ENV
               fi
             fi
           else
-            echo "COMMAND=${COMMAND} --log-opts='^origin/main ${{ github.EVENT.PULL_REQUEST.HEAD.SHA }}'" >> $GITHUB_ENV
+            echo "command=${COMMAND} --log-opts='^origin/main ${{ github.event.pull_request.head.sha }}'" >> $GITHUB_ENV
           fi
-      - name: GitLeaks
+
+      - name: Run GitLeaks
         run: |
-          echo "Running: ${{ env.COMMAND }}"
-          docker run --rm -v $(pwd):/app -i --entrypoint /bin/bash zricethezav/gitleaks:${{ inputs.GITLEAKS_VERSION }} -c "${{ env.COMMAND }}"
+          echo "Running: ${{ env.command }}"
+          docker run --rm -v $(pwd):/app -i --entrypoint /bin/bash zricethezav/gitleaks:${{ inputs.gitleaks_version }} -c "${{ env.command }}"
