--- a/.github/workflows/reusable-jekyll-site-deploy.yml
+++ b/.github/workflows/reusable-jekyll-site-deploy.yml
@@ -1,38 +1,38 @@
 on:
   workflow_call:
     inputs:
-      # Whether to move the SOURCE_FOLDER/SOURCE_SITE_FILES_FOLDER/* to SOURCE_FOLDER/
-      MOVE_SITE_FILES:
+      # Whether to move the source_folder/source_site_files_folder/* to source_folder/
+      move_site_files:
         default: 'false'
         required: false
         type: string
       # The folder to deploy from WITH a / at the end
-      SOURCE_FOLDER:
+      source_folder:
         default: _site/
         required: false
         type: string
       # The location of the site files WITH a / at the end
-      SOURCE_SITE_FILES_FOLDER:
+      source_site_files_folder:
         default: site_files/
         required: false
         type: string
       # The branch to deploy to
-      TARGET_BRANCH:
+      target_branch:
         default: pages
         required: false
         type: string
       # Whether to deploy to an external repository or not
-      TARGET_EXTERNAL_REPOSITORY:
+      target_external_repository:
         default: 'false'
         required: false
         type: string
       # The repository to deploy to IF not the same repository
-      TARGET_REPOSITORY_NAME:
+      target_repository_name:
         required: false
         type: string
     secrets:
       # This should be set in the GitHub repository settings IF deploying to external repository
-      PRIVATE_DEPLOY_KEY:
+      private_deploy_key:
         required: false
 
 jobs:
@@ -45,38 +45,44 @@ jobs:
         with:
           fetch-depth: 2147483647
           ref: main
+
       - name: Install Ruby and Bundle Install
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+
       - name: Jekyll Build
-        run: JEKYLL_ENV=production bundle exec jekyll build --destination ${{ inputs.SOURCE_FOLDER }}
-      - if: ${{ inputs.MOVE_SITE_FILES == 'true' }}
+        run: JEKYLL_ENV=production bundle exec jekyll build --destination ${{ inputs.source_folder }}
+
+      - if: ${{ inputs.move_site_files == 'true' }}
         name: Move Site Files
-        run: |
-          mv ${{ inputs.SOURCE_SITE_FILES_FOLDER }}* ${{ inputs.SOURCE_FOLDER }}
-          rm -r ${{ inputs.SOURCE_FOLDER }}${{ inputs.SOURCE_SITE_FILES_FOLDER }} || echo 0
-      - if: ${{ inputs.TARGET_EXTERNAL_REPOSITORY == 'true' }}
+        uses: emmahsax/reusable-github-actions-workflows/move-up-nested-files@test
+        with:
+          dir: ${{ inputs.source_folder }}
+          nested_dir: ${{ inputs.source_site_files_folder }}
+
+      - if: ${{ inputs.target_external_repository == 'true' }}
         name: Deploy Site to External Repository
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: ${{ inputs.TARGET_BRANCH }}
+          branch: ${{ inputs.target_branch }}
           clean: true
-          commit-message: Deploy to ${{ inputs.TARGET_REPOSITORY_NAME }}
-          folder: ${{ inputs.SOURCE_FOLDER }}
+          commit-message: Deploy to ${{ inputs.target_repository_name }}
+          folder: ${{ inputs.source_folder }}
           git-config-email: 41898282+github-actions[bot]@users.noreply.github.com
           git-config-name: github-actions[bot]
-          repository-name: ${{ inputs.TARGET_REPOSITORY_NAME }}
+          repository-name: ${{ inputs.target_repository_name }}
           silent: true
-          ssh-key: ${{ secrets.PRIVATE_DEPLOY_KEY }}
-      - if: ${{ inputs.TARGET_EXTERNAL_REPOSITORY == 'false' }}
+          ssh-key: ${{ secrets.private_deploy_key }}
+
+      - if: ${{ inputs.target_external_repository == 'false' }}
         name: Deploy Site to Internal Branch
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: ${{ inputs.TARGET_BRANCH }}
+          branch: ${{ inputs.target_branch }}
           clean: true
-          commit-message: Deploy to ${{ github.REPOSITORY }}
-          folder: ${{ inputs.SOURCE_FOLDER }}
+          commit-message: Deploy to ${{ github.repository }}
+          folder: ${{ inputs.source_folder }}
           git-config-email: 41898282+github-actions[bot]@users.noreply.github.com
           git-config-name: github-actions[bot]
           silent: true
