--- a/.github/workflows/reusable-jekyll-site-html-proofer.yml
+++ b/.github/workflows/reusable-jekyll-site-html-proofer.yml
@@ -2,12 +2,12 @@ on:
   workflow_call:
     inputs:
       # The name of the job that calls this one
-      CALLER_JOB_NAME:
+      caller_job_name:
         default: jekyll-site-html-proofer
         required: false
         type: string
       # The file or command to run
-      COMMAND:
+      command:
         required: true
         type: string
 
@@ -15,37 +15,39 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: Set Branch Variable
-        run: |
-          if [[ ${{ github.REF }} == 'refs/heads'* ]]; then # This is a branch, not a pull request
-            echo "BRANCH=$(echo ${{ github.REF }} | sed -E 's|refs/[a-zA-Z]+/||')" >> $GITHUB_ENV
-          else
-            echo "BRANCH=$(echo ${{ github.HEAD_REF }} | sed -E 's|refs/[a-zA-Z]+/||')" >> $GITHUB_ENV
-          fi
+      - id: set_branch_variable
+        name: Set Branch Variable
+        uses: emmahsax/reusable-github-actions-workflows/set-branch-variable@test
+
       - name: Check Out Code
         uses: actions/checkout@v3
         with:
-          ref: ${{ env.BRANCH }}
+          ref: ${{ steps.set_branch_variable.outputs.branch }}
+
       - name: Install Ruby and Bundle Install
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+
       - name: Jekyll Build
         run: JEKYLL_ENV=production bundle exec jekyll build --destination _site
+
       - name: HTML Proofer
         run: |
-          if ${{ inputs.COMMAND }}; then
+          if ${{ inputs.command }}; then
             echo "PROOFER_STATUS=success" >> $GITHUB_ENV
           else
             echo "PROOFER_STATUS=fail" >> $GITHUB_ENV
           fi
+
       - id: job_log_url
         if: github.EVENT_NAME == 'pull_request'
         name: Get Job Log URL
         uses: Tiryoh/gha-jobid-action@v0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          job_name: ${{ inputs.CALLER_JOB_NAME }} / ${{ github.JOB }}
+          github_token: ${{ secrets.github_token }}
+          job_name: ${{ inputs.caller_job_name }} / ${{ github.job }}
+
       - if: github.EVENT_NAME == 'pull_request' && env.PROOFER_STATUS == 'fail'
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v2
@@ -53,6 +55,7 @@ jobs:
           comment_tag: execution
           message: |
             Latest run of Jekyll Site HTML Proofer **failed**: ${{ steps.job_log_url.outputs.html_url }}
+
       - if: github.EVENT_NAME == 'pull_request' && env.PROOFER_STATUS == 'success'
         name: Pull Request Success Comment
         uses: thollander/actions-comment-pull-request@v2
