--- a/.github/workflows/reusable-rspec.yml
+++ b/.github/workflows/reusable-rspec.yml
@@ -5,20 +5,19 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: Set Branch Variable
-        run: |
-          if [[ ${{ github.REF }} == 'refs/heads'* ]]; then # This is a branch, not a pull request
-            echo "BRANCH=$(echo ${{ github.REF }} | sed -E 's|refs/[a-zA-Z]+/||')" >> $GITHUB_ENV
-          else
-            echo "BRANCH=$(echo ${{ github.HEAD_REF }} | sed -E 's|refs/[a-zA-Z]+/||')" >> $GITHUB_ENV
-          fi
+      - id: set_branch_variable
+        name: Set Branch Variable
+        uses: emmahsax/reusable-github-actions-workflows/set-branch-variable@test
+
       - name: Check Out Code
         uses: actions/checkout@v3
         with:
-          ref: ${{ env.BRANCH }}
+          ref: ${{ steps.set_branch_variable.outputs.branch }}
+
       - name: Install Ruby and Bundle Install
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+
       - name: Rspec
         run: bundle exec rspec
