--- a/.github/workflows/reusable-gitleaks.yml
+++ b/.github/workflows/reusable-gitleaks.yml
@@ -3,6 +3,7 @@ on:
     inputs:
       # A list of commits to ignore when running GitLeaks
       gitleaks_config_commits:
+        description: A list of commits to ignore when running GitLeaks
         default: "[]"
         required: false
         type: string
@@ -25,7 +26,7 @@ on:
       run_default_on_all_commits:
         default: true
         required: false
-        type: string
+        type: boolean
       # Commit on default branch to start running GitLeaks from (required if run_default_on_all_commits is false)
       run_default_on_since_commit:
         required: false
