--- a/.github/workflows/reusable-markdown-linter.yml
+++ b/.github/workflows/reusable-markdown-linter.yml
@@ -1,8 +1,8 @@
 on:
   workflow_call:
     inputs:
-      # The file or command to run
       linter_command:
+        description: The file or command to run
         required: true
         type: string
 
