--- a/.github/workflows/jekyll-site-html-proofer.yml
+++ b/.github/workflows/jekyll-site-html-proofer.yml
@@ -35,20 +35,20 @@ jobs:
       - name: HTML Proofer
         run: |
           if ${{ inputs.command }}; then
-            echo "PROOFER_STATUS=success" >> $GITHUB_ENV
+            echo "proofer_status=success" >> $GITHUB_ENV
           else
-            echo "PROOFER_STATUS=fail" >> $GITHUB_ENV
+            echo "proofer_status=fail" >> $GITHUB_ENV
           fi
 
       - id: job_log_url
-        if: github.EVENT_NAME == 'pull_request'
+        if: github.event_name == 'pull_request'
         name: Get Job Log URL
         uses: Tiryoh/gha-jobid-action@v0
         with:
           github_token: ${{ secrets.github_token }}
           job_name: ${{ inputs.caller_job_name }} / ${{ github.job }}
 
-      - if: github.EVENT_NAME == 'pull_request' && env.PROOFER_STATUS == 'fail'
+      - if: github.event_name == 'pull_request' && env.proofer_status == 'fail'
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
@@ -56,7 +56,7 @@ jobs:
           message: |
             Latest run of Jekyll Site HTML Proofer **failed**: ${{ steps.job_log_url.outputs.html_url }}
 
-      - if: github.EVENT_NAME == 'pull_request' && env.PROOFER_STATUS == 'success'
+      - if: github.event_name == 'pull_request' && env.proofer_status == 'success'
         name: Pull Request Success Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
