--- a/.github/workflows/javascript-linter.yml
+++ b/.github/workflows/javascript-linter.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - id: set_branch_variable
         name: Set Branch Variable
-        uses: emmahsax/github-actions/set-branch-variable@test
+        uses: emmahsax/github-actions/set-branch-variable@main
 
       - name: Check Out Code
         uses: actions/checkout@v3
