--- a/set-branch-variable/action.yml
+++ b/set-branch-variable/action.yml
@@ -4,12 +4,12 @@ description: Set the current branch as an output variable
 outputs:
   branch:
     description: The name of the branch
-    value: ${{ steps.set-branch-variable.outputs.branch }}
+    value: ${{ steps.set_branch_variable.outputs.branch }}
 
 runs:
   using: composite
   steps:
-    - id: set-branch-variable
+    - id: set_branch_variable
       run: |
         if [[ ${{ github.ref }} == 'refs/heads'* ]]; then # This is a branch, not a pull request
           echo "branch=$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')" >> $GITHUB_OUTPUT
