--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -59,7 +59,7 @@ jobs:
             if [[ ${{ github.sha }} != $DEFAULT_BRANCH_COMMIT ]]; then # This branch is not the default branch
               echo "command=${COMMAND} --log-opts='^origin/main ${{ github.sha }}'" >> $GITHUB_ENV
             else
-              if [[ ${{ inputs.run_default_on_all_commits == true }} ]]; then # Running on all commits in git history
+              if [[ ${{ inputs.run_default_on_all_commits }} == true ]]; then # Running on all commits in git history
                 echo "command=${COMMAND}" >> $GITHUB_ENV
               else
                 echo "command=${COMMAND} --log-opts='${{ inputs.run_default_on_since_commit }}..${{ github.sha }}'" >> $GITHUB_ENV
