--- a/rubocop/action.yml
+++ b/rubocop/action.yml
@@ -4,19 +4,15 @@ runs:
   using: composite
   steps:
       - id: set_branch_variable
-        name: Set Branch Variable
         uses: emmahsax/github-actions/set-branch-variable@main
 
-      - name: Check Out Code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           ref: ${{ steps.set_branch_variable.outputs.branch }}
 
-      - name: Install Ruby and Bundle Install
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
 
-      - name: Rubocop
-        run: bundle exec rubocop
+      - run: bundle exec rubocop
         shell: bash
