--- a/.github/workflows/jekyll-site-build.yml
+++ b/.github/workflows/jekyll-site-build.yml
@@ -20,4 +20,4 @@ jobs:
           bundler-cache: true
 
       - name: Jekyll Build
-        run: JEKYLL_ENV=production bundle exec jekyll build --destination _site/
+        uses: emmahsax/github-actions/jekyll-build@test_composite
