--- a/.github/workflows/jekyll-site-html-proofer.yml
+++ b/.github/workflows/jekyll-site-html-proofer.yml
@@ -30,36 +30,21 @@ jobs:
           bundler-cache: true
 
       - name: Jekyll Build
-        run: JEKYLL_ENV=production bundle exec jekyll build --destination _site
+        uses: emmahsax/github-actions/jekyll-build@test_composite
 
       - name: HTML Proofer
         run: |
           if ${{ inputs.command }}; then
             echo "proofer_status=success" >> $GITHUB_ENV
           else
-            echo "proofer_status=fail" >> $GITHUB_ENV
+            echo "proofer_status=failure" >> $GITHUB_ENV
           fi
 
-      - id: job_log_url
-        if: github.event_name == 'pull_request'
-        name: Get Job Log URL
-        uses: Tiryoh/gha-jobid-action@v0
+      - name: Write Status Comment
+        uses: emmahsax/github-actions/write-status-comment@test_composite
         with:
+          caller_job_name: ${{ inputs.caller_job_name }}
           github_token: ${{ secrets.github_token }}
-          job_name: ${{ inputs.caller_job_name }} / ${{ github.job }}
-
-      - if: github.event_name == 'pull_request' && env.proofer_status == 'fail'
-        name: Pull Request Failure Comment
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          comment_tag: execution
-          message: |
-            :warning: Latest run of Jekyll Site HTML Proofer **failed**: ${{ steps.job_log_url.outputs.html_url }}
-
-      - if: github.event_name == 'pull_request' && env.proofer_status == 'success'
-        name: Pull Request Success Comment
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          comment_tag: execution
-          message: |
-            :white_check_mark: Latest run of Jekyll Site HTML Proofer **succeeded**: ${{ steps.job_log_url.outputs.html_url }}
+          message_failure: ':warning: Latest run of Jekyll Site HTML Proofer **failed**:'
+          message_success: ':white_check_mark: Latest run of Jekyll Site HTML Proofer **succeeded**:'
+          status: ${{ env.proofer_status }}
