--- a/.github/workflows/static-site-deploy.yml
+++ b/.github/workflows/static-site-deploy.yml
@@ -55,28 +55,11 @@ jobs:
           dir: ${{ inputs.source_folder }}
           nested_dir: ${{ inputs.source_site_files_folder }}
 
-      - if: ${{ inputs.target_external_repository }}
-        name: Deploy Site to External Repository
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Deploy Site
+        uses: emmahsax/github-actions/deploy-site@test_composite
         with:
-          branch: ${{ inputs.target_branch }}
-          clean: true
-          commit-message: Deploy to ${{ inputs.target_repository_name }}
-          folder: ${{ inputs.source_folder }}
-          git-config-email: 41898282+github-actions[bot]@users.noreply.github.com
-          git-config-name: github-actions[bot]
-          repository-name: ${{ inputs.target_repository_name }}
-          silent: true
-          ssh-key: ${{ secrets.private_deploy_key }}
-
-      - if: ${{ inputs.target_external_repository == false }}
-        name: Deploy Site to Internal Branch
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: ${{ inputs.target_branch }}
-          clean: true
-          commit-message: Deploy to ${{ github.repository }}
-          folder: ${{ inputs.source_folder }}
-          git-config-email: 41898282+github-actions[bot]@users.noreply.github.com
-          git-config-name: github-actions[bot]
-          silent: true
+          private_deploy_key: ${{ secrets.private_deploy_key }}
+          source_folder: ${{ inputs.source_folder }}
+          target_branch: ${{ inputs.target_branch }}
+          target_external_repository: ${{ inputs.target_external_repository }}
+          target_repository_name: ${{ inputs.target_repository_name }}
