--- a/.github/workflows/javascript-linter.yml
+++ b/.github/workflows/javascript-linter.yml
@@ -1,6 +1,10 @@
 on:
   workflow_call:
     inputs:
+      branch:
+        description: The branch to check out
+        required: true
+        type: string
       linter_command:
         description: The file or command to run
         required: true
@@ -15,14 +19,10 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - id: set_branch_variable
-        name: Set Branch Variable
-        uses: emmahsax/github-actions/set-branch-variable@main
-
       - name: Check Out Code
         uses: actions/checkout@v3
         with:
-          ref: ${{ steps.set_branch_variable.outputs.branch }}
+          ref: ${{ inputs.branch }}
 
       - name: Install Node
         uses: actions/setup-node@v3
