--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -1,18 +1,19 @@
 on:
   workflow_call:
+    inputs:
+      branch:
+        description: The branch to check out
+        required: true
+        type: string
 
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - id: set_branch_variable
-        name: Set Branch Variable
-        uses: emmahsax/github-actions/set-branch-variable@main
-
       - name: Check Out Code
         uses: actions/checkout@v3
         with:
-          ref: ${{ steps.set_branch_variable.outputs.branch }}
+          ref: ${{ inputs.branch }}
 
       - name: Install Ruby and Bundle Install
         uses: ruby/setup-ruby@v1
