--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -28,7 +28,7 @@ jobs:
           go-version: ${{ inputs.go_version }}
 
       - name: Set up Go
-        uses: emmahsax/github-actions/setup-go@main
+        uses: emmahsax/github-actions/setup-go@update_gitleaks_version
         with:
           github_token: ${{ secrets.github_token }}
           go_version: ${{ inputs.go_version }}
