--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -9,10 +9,6 @@ on:
         description: The version of Go to build
         required: true
         type: string
-      release_version:
-        description: The version tag to use when releasing
-        required: true
-        type: string
 
 jobs:
   main:
@@ -36,4 +32,4 @@ jobs:
         with:
           args: release --clean
           distribution: goreleaser
-          version: ${{ inputs.release_version }}
+          version: latest
