--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -23,7 +23,7 @@ jobs:
           ref: ${{ inputs.branch }}
 
       - name: Set up Go
-        uses: emmahsax/github-actions/setup-go@update_gitleaks_version
+        uses: emmahsax/github-actions/setup-go@main
         with:
           github_token: ${{ secrets.github_token }}
           go_version: ${{ inputs.go_version }}
