--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -9,9 +9,10 @@ on:
         required: true
         type: string
       go_version:
+        default: 1.21
         description: The version of Go to build
-        required: true
-        type: string
+        required: false
+        type: number
 
 jobs:
   main:
@@ -28,5 +29,5 @@ jobs:
           github_token: ${{ secrets.github_token }}
           go_version: ${{ inputs.go_version }}
 
-      - name: Build
+      - name: Go Build
         run: ${{ inputs.build_command }}
