--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -15,6 +15,7 @@ on:
         required: false
         type: number
       tag_name:
+        default: ""
         description: The name of the tag/release to use
         required: false
         type: string
@@ -44,7 +45,7 @@ jobs:
       - name: Set Tag Name
         id: tag_name
         run: |
-          if [[ ${{ inputs.tag_name }} == '' ]]; then
+          if [[ ${{ inputs.tag_name }} == "" ]]; then
             CALCULATED_SHA=$(git rev-parse --short ${{ github.sha }})
             echo "tag_name=$CALCULATED_SHA" >> $GITHUB_OUTPUT
           else
