Add an action for Go testing

--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -2,7 +2,8 @@ on:
   workflow_call:
     inputs:
       build_command:
-        required: true
+        default: go build -v ./...
+        required: false
         type: string
       files:
         default: ""
