--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -25,6 +25,9 @@ on:
         required: true
         type: boolean
 
+permissions:
+  contents: write
+
 jobs:
   main:
     runs-on: ubuntu-latest
