--- a/.github/workflows/jekyll-site-html-proofer.yml
+++ b/.github/workflows/jekyll-site-html-proofer.yml
@@ -14,6 +14,11 @@ on:
         description: The file or command to run
         required: true
         type: string
+      notify_pr:
+        default: 'false'
+        description: Whether to notify the PR about failures/success runs
+        required: false
+        type: string
 
 jobs:
   main:
@@ -33,6 +38,11 @@ jobs:
         run: JEKYLL_ENV=production bundle exec jekyll build --destination _site
 
       - name: HTML Proofer
+        if: inputs.notify_pr == 'false'
+        run: ${{ inputs.command }}
+
+      - name: HTML Proofer
+        if: inputs.notify_pr == 'true'
         run: |
           if ${{ inputs.command }}; then
             echo "proofer_status=success" >> $GITHUB_ENV
@@ -41,25 +51,25 @@ jobs:
           fi
 
       - id: job_log_url
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && inputs.notify_pr == 'true'
         name: Get Job Log URL
         uses: Tiryoh/gha-jobid-action@v1
         with:
           github_token: ${{ secrets.github_token }}
           job_name: ${{ inputs.caller_job_name }} / ${{ github.job }}
 
-      - if: github.event_name == 'pull_request' && env.proofer_status == 'fail'
+      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.proofer_status == 'fail'
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
-          comment_tag: execution
+          comment_tag: html-proofer
           message: |
             :warning: Latest run of Jekyll Site HTML Proofer **failed**: ${{ steps.job_log_url.outputs.html_url }}
 
-      - if: github.event_name == 'pull_request' && env.proofer_status == 'success'
+      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.proofer_status == 'success'
         name: Pull Request Success Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
-          comment_tag: execution
+          comment_tag: html-proofer
           message: |
             :white_check_mark: Latest run of Jekyll Site HTML Proofer **succeeded**: ${{ steps.job_log_url.outputs.html_url }}
