--- a/.github/workflows/jekyll-site-html-proofer.yml
+++ b/.github/workflows/jekyll-site-html-proofer.yml
@@ -38,16 +38,15 @@ jobs:
         run: JEKYLL_ENV=production bundle exec jekyll build --destination _site
 
       - name: HTML Proofer
-        if: inputs.notify_pr == 'false'
-        run: ${{ inputs.command }}
-
-      - name: HTML Proofer
-        if: inputs.notify_pr == 'true'
         run: |
-          if ${{ inputs.command }}; then
-            echo "proofer_status=success" >> $GITHUB_ENV
+          if ${{ inputs.notify_pr }} == 'true'; then
+            if ${{ inputs.command }}; then
+              echo "status=success" >> $GITHUB_ENV
+            else
+              echo "status=fail" >> $GITHUB_ENV
+            fi
           else
-            echo "proofer_status=fail" >> $GITHUB_ENV
+            ${{ inputs.command }}
           fi
 
       - id: job_log_url
@@ -58,7 +57,7 @@ jobs:
           github_token: ${{ secrets.github_token }}
           job_name: ${{ inputs.caller_job_name }} / ${{ github.job }}
 
-      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.proofer_status == 'fail'
+      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.status == 'fail'
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
@@ -66,7 +65,7 @@ jobs:
           message: |
             :warning: Latest run of Jekyll Site HTML Proofer **failed**: ${{ steps.job_log_url.outputs.html_url }}
 
-      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.proofer_status == 'success'
+      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.status == 'success'
         name: Pull Request Success Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
