--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -15,7 +15,7 @@ on:
         required: true
         type: string
       notify_pr:
-        default: 'false'
+        default: false
         description: Whether to notify the PR about failures/success runs
         required: false
         type: string
@@ -36,7 +36,7 @@ jobs:
 
       - name: Markdown Linter
         run: |
-          if ${{ inputs.notify_pr }} == 'true'; then
+          if ${{ inputs.notify_pr }}; then
             if ${{ inputs.linter_command }}; then
               echo "status=success" >> $GITHUB_ENV
             else
